compiler/tests/en/errors/default_arg_type.salam
// EXPECT: E002
// A default value must be assignable to the parameter's declared type.
func bad(a i32, label str = 5):
    println(a, label)
end

func main:
    bad(1)
end
